--- a/package.xml
+++ b/package.xml
@@ -9,8 +9,11 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>rospy</depend>
   <depend>std_msgs</depend>
-  <exec_depend>microstrain_inertial_driver</exec_depend>
+  <exec_depend>mavros</exec_depend>
   <exec_depend>launch_config</exec_depend>
+  <exec_depend>microstrain_inertial_driver</exec_depend>
+  <exec_depend>sick_tim</exec_depend>
+  <exec_depend>hector_slam</exec_depend>
   <exec_depend>usb_cam</exec_depend>
   <exec_depend>apriltag_ros</exec_depend>
 
